[package]
name = "esdt-system-sc-mock"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/esdt_system_sc_mock.rs"

[dependencies.multiversx-sc]
version = "=0.50.0"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.0"
