[package]
name = "nft-minter"
version = "0.0.0"
authors = ["Dorin Marian Iancu, dorin.iancu@elrond.com"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.multiversx-sc]
version = "0.41.3"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dependencies.multiversx-sc-modules]
version = "0.41.3"

[dev-dependencies.esdt-system-sc-mock]
path = "../esdt-system-sc-mock"

[dev-dependencies.multiversx-sc-scenario]
version = "0.41.3"
