[package]
name = "royalties-handler"
version = "0.0.0"
authors = [ "Dorin Marian Iancu, dorin.iancu@elrond.com" ]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.nft-minter]
path = "../nft-minter"

[dependencies.elrond-wasm]
version = "0.30.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.30.0"
