[package]
name = "royalties-handler"
version = "0.0.0"
authors = [ "Dorin Marian Iancu, dorin.iancu@elrond.com" ]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.nft-minter]
path = "../nft-minter"

[dependencies.elrond-wasm]
version = "0.33.0"

[dev-dependencies.esdt-system-sc-mock]
path = "../esdt-system-sc-mock"

[dev-dependencies.elrond-wasm-debug]
version = "0.33.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
