[package]
name = "esdt-system-sc-mock-wasm"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.esdt-system-sc-mock]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.41.3"

[workspace]
members = ["."]
